tests/invalid/module/dupe_file.facet
mod item {
  pub fn id(x: affine isize) -> affine isize { x }
}

mod item {
  pub fn id(x: affine isize) -> affine isize { x }
}

fn main() -> affine isize {
  1
}
